--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,7 +85,10 @@ jobs:
           name: build-artifacts
       - name: Deploy Project Artifacts to Vercel
         id: deploy
-        run: echo "DEPLOY_URL=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} | grep 'https://')" >> $GITHUB_ENV
+        run: |
+          DEPLOY_URL=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }})
+          echo "preview_url=${DEPLOY_URL}" >> $GITHUB_ENV
+          echo "::set-output name=preview_url::${DEPLOY_URL}"
       - name: Comment Deployment URL on PR
         uses: actions/github-script@v5
         if: success()
