--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,16 @@ jobs:
   install:
     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: "18"
-          cache: "npm"
-      - run: npm ci
+  e2e:
+    runs-on: ubuntu-latest
+
+  lint:
+    runs-on: ubuntu-latest
+
+  build:
+    runs-on: ubuntu-latest
+
+
+  
+
+
