--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [main]
 
+env:
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+  NEXT_PUBLIC_API_BASE_URL: ${{ vars.NEXT_PUBLIC_API_BASE_URL }}
+
 jobs:
   install:
     runs-on: ubuntu-latest
@@ -20,7 +25,6 @@ jobs:
 
   lint:
     runs-on: ubuntu-latest
-    needs: install
 
     steps:
       - uses: actions/checkout@v3
@@ -36,23 +40,29 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: install
-    env:
-      NEXT_PUBLIC_API_BASE_URL: ${{vars.NEXT_PUBLIC_API_BASE_URL}}
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Install Vercel CLI
+        run: npm install --global vercel@latest
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+      - name: Build Project Artifacts
+        run: |
+          if [ "${{ github.ref }}" = "refs/heads/main" ]; then
+            vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
+            vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
+          else
+            vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
+            vercel build --token=${{ secrets.VERCEL_TOKEN }}
+          fi
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v2
         with:
-          node-version: "18"
-          cache: "npm"
-      - run: npm ci
-      - run: npm run build
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: nextjs-build
-          path: .next/
+          name: build-artifacts
+          path: |
+            .next/
+            .vercel/
 
   e2e:
     runs-on: ubuntu-latest
@@ -64,13 +74,58 @@ jobs:
         with:
           node-version: "18"
           cache: "npm"
-      - run: npm ci
       - name: Download build artifacts
         uses: actions/download-artifact@v3
         with:
-          name: nextjs-build
-          path: .next/
+          name: build-artifacts
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
           start: npm start
+
+  deploy-preview:
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: github.event_name == 'pull_request'
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download build artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: build-artifacts
+      - name: Deploy Project Artifacts to Vercel
+        id: deploy
+        run: |
+          DEPLOY_URL=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }})
+          echo "preview_url=${DEPLOY_URL}" >> $GITHUB_ENV
+          echo "::set-output name=preview_url::${DEPLOY_URL}"
+      - name: Comment Deployment URL on PR
+        uses: actions/github-script@v5
+        if: success()
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const url = process.env.DEPLOY_URL;
+            const message = `Deploy preview: ${url}`;
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo, 
+              body: message
+            });
+
+  deploy-production:
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download build artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: build-artifacts
+          path: .next/
+      - name: Deploy Project Artifacts to Vercel
+        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
