--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -128,4 +128,4 @@ jobs:
           name: build-artifacts
           path: .next/
       - name: Deploy Project Artifacts to Vercel
-        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
+        run: vercel deploy --prod --prebuilt --token=${{ secrets.VERCEL_TOKEN }}
