--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,7 +83,9 @@ jobs:
           name: build-artifacts
       - name: Deploy Project Artifacts to Vercel
         id: deploy
-        run: echo "DEPLOY_URL=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} | grep 'https://')" >> $GITHUB_ENV
+        run: |
+          DEPLOY_URL=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} | grep 'https://')
+          echo "DEPLOY_URL=${DEPLOY_URL}" >> $GITHUB_ENV
       - name: Comment Deployment URL on PR
         uses: actions/github-script@v5
         if: success()
