--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,8 +85,7 @@ jobs:
         id: deploy
         run: |
           DEPLOY_URL=$(vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }})
-          echo "preview_url=${DEPLOY_URL}" >> $GITHUB_ENV
-          echo "::set-output name=preview_url::${DEPLOY_URL}"
+          echo "DEPLOY_URL=${DEPLOY_URL}" >> $GITHUB_ENV
       - name: Comment Deployment URL on PR
         uses: actions/github-script@v5
         if: success()
